<resources>
    <string name="app_name">Royal VVIP Travel</string>
    <string name="person_outline">Person Outline</string>
    <string name="bus_image">Bus image</string>
    <string name="hey_shanky">Hey Dan!</string>
    <string name="where_you_want_to_go">Where do you want to go.</string>
    <string name="destination">Destination</string>
    <string name="from">From</string>
    <string name="select_date">Select Date</string>
    <string name="search_buses">Search Buses</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="filter">Filter</string>
    <string name="select_your_bus">Select your seat!</string>
    <string name="pune">Accra</string>
    <string name="swap">swap</string>
    <string name="mumbai">Kumasi</string>
    <string name="_12th_feb_2019_tuesday">12th - Feb - 2019 | Tuesday</string>
    <string name="_9_00am_12_30pm">9:00AM - 12:30PM</string>
    <string name="expo_bus_service">Expo bus service</string>
    <string name="a_c_sleeper_2_2">A/C Sleeper (2+2)</string>
    <string name="_600_00">GH₵ 60.00</string>
    <string name="_3_30_hour">3.30 Hour</string>
    <string name="booked">booked</string>
    <string name="available">Available</string>
    <string name="your_seat">Your Seat</string>
    <string name="_1">1</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome_to_royal_vvip_travel">Welcome to Royal VVIP Travel</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="click_here_to_register">Click here to Register</string>
    <string name="_10_00am_2_00pm">10:00AM - 2:00PM</string>
    <string name="red_bus_service">Red Bus service</string>
    <string name="_560_00">GH₵ 56.00</string>
    <string name="_4_hour">4 Hour</string>
    <string name="_12_15pm_3_30pm">12:15PM - 3:30PM</string>
    <string name="start_service">Start service</string>
    <string name="_450_00">GH₵ 45.00</string>
    <string name="_3_15_hour">3.15 Hour</string>
    <string name="_3_00pm_5_45pm">3:00PM - 5:45PM</string>
    <string name="travelo_service">Travelo service</string>
    <string name="_375_00">GH₵ 37.00</string>
    <string name="_2_45_hour">2.45 Hour</string>
    <string name="_7_00pm_10_00pm">7:00PM - 10:00PM</string>
    <string name="shuttle_bus_service">Shuttle bus service</string>
    <string name="_700_00">GH₵ 70.00</string>
    <string name="_3_00_hour">3.00 Hour</string>
    <string name="royal_vvip_travel">Royal VVIP Travel</string>
</resources>
